--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cloud_firestore: ^5.6.0
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.4
   firebase_core: ^3.9.0
+  firebase_storage: ^12.3.7
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
@@ -42,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   persistent_bottom_nav_bar: ^6.2.1
   shared_preferences: ^2.3.4
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
