--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  carousel_slider: ^5.0.0
   cloud_firestore: ^5.6.0
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.4
@@ -43,6 +44,7 @@ dependencies:
   google_sign_in: ^6.2.2
   image_picker: ^1.1.2
   persistent_bottom_nav_bar: ^6.2.1
+  photo_view: ^0.15.0
   shared_preferences: ^2.3.4
   uuid: ^4.5.1
 
